# c-staff-management

./: .clang-format  .gitignore  CMakeLists.txt
include/: models.h  operations.h  utils.h
src/: main.c  menu.c  operations.c  utils.c
